# Mobile_Metherological_Station

./: .cproject  .project  README.md  main.c
AI_detection/: CMakeLists.txt  README.md
AI_detection/main/: CMakeLists.txt  app_camera_esp.cc  app_camera_esp.h  detection_responder.cc  detection_responder.h  idf_component.yml  image_provider.cc  image_provider.h  main.cc  main_functions.cc  main_functions.h  model_settings.cc  model_settings.h  weather_detection_model.cc  weather_detection_model.h  wifi.c  wifi.h
Libraries/BMP280/: bmp280.c  bmp280.h  bmp280_low_level.c
WeatherStationESP32/: CMakeLists.txt  platformio.ini  sdkconfig.esp32cam  sdkconfig.esp32cam.old
WeatherStationESP32/lib/CloudDetector/: cloud_detector.c  cloud_detector.h
WeatherStationESP32/lib/DhtFunction/: DhtFunctions.c  DhtFunctions.h
WeatherStationESP32/lib/LebLib/: LedLib.c  LedLib.h
WeatherStationESP32/lib/SmokeLib/: SmokeLib.c  SmokeLib.h
WeatherStationESP32/lib/bmp280_lib/: bmp280_lib.c  bmp280_lib.h
WeatherStationESP32/lib/wifi/: wifi.c  wifi.h
WeatherStationESP32/src/: main.c
