idf_component_register(SRCS weather_detection_model.cc
                            model_settings.cc
                            main_functions.cc
                            image_provider.cc
                            detection_responder.cc
                            app_camera_esp.cc
                            main.cc
                    INCLUDE_DIRS "")
